k8s/vimi-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vimi
  labels:
    name: vimi
    simulation-type: dod-lvc
    compliance: strobe
